<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/medium_margin"
    app:cardElevation="@dimen/small_margin"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/small_margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_obat"
            android:layout_width="256dp"
            android:layout_height="125dp"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            android:contentDescription="@string/gambar"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_nama_obat"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/nama_obat"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_harga"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/harga"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_efek"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/efek"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>